[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/TheWitch/Idle.png" type="Texture" id=3]
[ext_resource path="res://src/Enemies/TheWitch/TheWith.gd" type="Script" id=4]
[ext_resource path="res://Assets/Enemies/TheWitch/Cast.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Cast",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 62.1571, 64.4029 )

[node name="TheWith" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 8
collision_mask = 5
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -67.9997 )
frames = SubResource( 8 )
animation = "Idle"
playing = true

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -68.7975 )
shape = SubResource( 9 )

[node name="EnemyStats" parent="." instance=ExtResource( 2 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
